--- a/01-Contracts/package.json
+++ b/01-Contracts/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "@openzeppelin/contracts-upgradeable": "^4.1.0",
+    "@truffle/abi-utils": "^0.2.3",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
     "hardhat-contract-sizer": "^2.0.3",
