--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -1,6 +1,5 @@
 dotenv: .env
 
-
 networks:
   default: development
 
@@ -16,7 +15,7 @@ networks:
     gas_limit: 2000000
     gas_price: 20000000000
 
-  
+
   development:
     gas_limit: max
     gas_buffer: 1
@@ -33,30 +32,27 @@ networks:
       network_id: 1588949648
       evm_version: istanbul
       fork: https://mainnet.infura.io/v3/29b8e685756646c8a1aa06c3f752e26b
-      mnemonic: MNEMONIC
+      mnemonic: [MNEMONIC]
       block_time: 0
       default_balance: 100
       unlock: null
-    
-    
-    
+
 etherscan:
-  apiKey: POLYSCAN_API_KEY
+  apiKey: [ETHERSCAN_API_KEY]
 
 dependencies:
     - OpenZeppelin/openzeppelin-contracts@4.0.0
     - OpenZeppelin/openzeppelin-test-helpers@0.5.13
-    - superfluid-finance/protocol-monorepo@0.1.2
-    - Uniswap/v2-periphery@1.1.0-beta.0
+    - superfluid-finance/ethereum-contracts@0.1.1
+    - Uniswap/v2-periphery@1.0.0-beta.0
     - Uniswap/v2-core@1.0.1
 
 compiler:
     solc:
       version: 0.8.3
       remappings:
-        - "@openzeppelin=OpenZeppelin/openzeppelin-contracts@4.0.0"
+        - "@openzeppelin/contracts=OpenZeppelin/openzeppelin-contracts@4.0.0/contracts/"
         - "@openzeppelin/test-helpers=OpenZeppelin/openzeppelin-test-helpers@0.5.13"
-        - "@superfluid-finance/ethereum-contracts=superfluid-finance/protocol-monorepo@0.1.2/packages/ethereum-contracts"
-        - "@uniswap/v2-periphery=Uniswap/v2-periphery@1.1.0-beta.0"
+        - "@superfluid-finance/ethereum-contracts=superfluid-finance/ethereum-contracts@0.1.1"
+        - "@uniswap/v2-periphery=Uniswap/v2-periphery@1.0.0-beta.0"
         - "@uniswap/v2-core=Uniswap/v2-core@1.0.1"
-        
