--- a/ricochet-hardhat/package.json
+++ b/ricochet-hardhat/package.json
@@ -39,7 +39,6 @@
     "@truffle/abi-utils": "^0.2.3",
     "@uniswap/v2-core": "^1.0.1",
     "@uniswap/v2-periphery": "^1.1.0-beta.0",
-    "hardhat-contract-sizer": "^2.0.3",
-    "usingtellor": "^3.0.2"
+    "hardhat-contract-sizer": "^2.0.3"
   }
 }
