--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -43,7 +43,7 @@ etherscan:
 dependencies:
     - OpenZeppelin/openzeppelin-contracts@4.0.0
     - OpenZeppelin/openzeppelin-test-helpers@0.5.13
-    - superfluid-finance/ethereum-contracts@0.1.2
+    - superfluid-finance/protocol-monorepo@ethereum-contracts@1.0.0-rc.7
     - Uniswap/v2-periphery@1.0.0-beta.0
     - Uniswap/v2-core@1.0.1
 
@@ -53,6 +53,6 @@ compiler:
       remappings:
         - "@openzeppelin/contracts=OpenZeppelin/openzeppelin-contracts@4.0.0/contracts/"
         - "@openzeppelin/test-helpers=OpenZeppelin/openzeppelin-test-helpers@0.5.13"
-        - "@superfluid-finance/ethereum-contracts=superfluid-finance/ethereum-contracts@0.1.2"
+        - "@superfluid-finance/ethereum-contracts=superfluid-finance/protocol-monorepo@ethereum-contracts@1.0.0-rc.7"
         - "@uniswap/v2-periphery=Uniswap/v2-periphery@1.0.0-beta.0"
         - "@uniswap/v2-core=Uniswap/v2-core@1.0.1"
