translated without sf

--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -39,6 +39,7 @@ etherscan:
 
 compiler:
     solc:
+      #version: 0.7.6
       version: 0.8.3
       remappings:
         - "@openzeppelin=./modules/OpenZeppelin/openzeppelin-contracts@4.0.0"
