--- a/brownie-config.yaml
+++ b/brownie-config.yaml
@@ -1,38 +1,35 @@
 dotenv: .env
 
 networks:
-  default: development
+    default: development
 
-  rinkeby:
-    host: https://rinkeby.infura.io/v3/${INFURA_KEY}
-    accounts: [RINKEBY_PRIVATE_KEY]
-    gas_limit: 2000000
-    gas_price: 20000000000
+    development:
+      host: http://127.0.0.1
+      gas_price: 0
+      persist: false
+      reverting_tx_gas_limit: 6721975
+      test_rpc:
+        fork: https://polygon-mainnet.g.alchemy.com/v2/iau-uzu7ghda0v8fr2g5p34
+        cmd: ganache-cli
+        port: 8545
+        gas_limit: 6721975
+        accounts: 11
+        evm_version: istanbul
+        mnemonic: mean ahead wire antique fiber detail clog mail anchor mail zone sign
+      
+    rinkeby:
+      host: https://rinkeby.infura.io/v3/${INFURA_KEY}
+      accounts: [RINKEBY_PRIVATE_KEY]
+      gas_limit: 2000000
+      gas_price: 20000000000
 
-  polygon:
-    host: https://polygon-mainnet.infura.io/v3/${INFURA_KEY}
-    accounts: [MATIC_PRIVATE_KEY]
-    gas_limit: 2000000
-    gas_price: 20000000000
+    polygon:
+      host: https://polygon-mainnet.infura.io/v3/${INFURA_KEY}
+      accounts: [MATIC_PRIVATE_KEY]
+      gas_limit: 2000000
+      gas_price: 20000000000
 
 
-  development:
-    gas_limit: max
-    gas_buffer: 1
-    gas_price: 80000
-    max_fee: null
-    priority_fee: null
-    reverting_tx_gas_limit: max
-    default_contract_owner: true
-    cmd_settings:
-      port: 8545
-      gas_limit: 6721975
-      accounts: 10
-      evm_version: istanbul
-      host: https://127.0.0.1
-      fork:
-      mnemonic: 
-     
 
 etherscan:
   apiKey: ETHERSCAN_API_KEY
